--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,8 @@ productInfo.p_Price.notempty=Product price cannot be empty.
 productInfo.descString.notempty=Product description cannot be empty.
 productInfo.p_Class.notempty=Product type cannot be empty.
 #=======================for product=================================
+orderInfoLUL.p_id.notempty=Product ID cannot be empty.
+orderInfoLUL.u_id.notempty=User ID cannot be empty.
+orderInfoLUL.o_status.notempty=Order status cannot be empty.
+orderInfoLUL.o_amt.notempty=Order amount cannot be empty.
+#=======================for order=================================
