--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -7,4 +7,6 @@ orderInfoLUL.p_id.notempty=\u8AB2\u7A0B\u7DE8\u865F\u4E0D\u5F97\u70BA\u7A7A\u503
 orderInfoLUL.u_id.notempty=\u6703\u54E1\u5E33\u865F\u4E0D\u5F97\u70BA\u7A7A\u503C\u3002
 orderInfoLUL.o_status.notempty=\u8A02\u55AE\u72C0\u614B\u4E0D\u5F97\u70BA\u7A7A\u503C\u3002
 orderInfoLUL.o_amt.notempty=\u8A02\u55AE\u5C0F\u8A08\u4E0D\u5F97\u70BA\u7A7A\u503C\u3002
+typeMismatch.orderInfo.p_id=\u6703\u54E1\u7DE8\u865F(p_id)\u5FC5\u9808\u70BA\u6574\u6578\u3002
+typeMismatch.orderInfo.o_amt=\u8A02\u55AE\u5C0F\u8A08(p_id)\u5FC5\u9808\u70BA\u6574\u6578\u3002
 #=======================for order=================================
