--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,6 @@ orderInfoLUL.p_id.notempty=Product ID cannot be empty.
 orderInfoLUL.u_id.notempty=User ID cannot be empty.
 orderInfoLUL.o_status.notempty=Order status cannot be empty.
 orderInfoLUL.o_amt.notempty=Order amount cannot be empty.
-typeMismatch.orderInfo.p_id=Product ID only accept integer value.
-typeMismatch.orderInfo.o_amt=Order amount only accept integer value.
+typeMismatch.emptyOrderInfo.p_id=Product ID only accept integer value.
+typeMismatch.emptyOrderInfo.o_amt=Order amount only accept integer value.
 #=======================for order=================================
