--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -10,3 +10,17 @@ orderInfoLUL.o_amt.notempty=\u8A02\u55AE\u5C0F\u8A08\u4E0D\u5F97\u70BA\u7A7A\u50
 typeMismatch.emptyOrderInfo.p_id=\u6703\u54E1\u7DE8\u865F(p_id)\u5FC5\u9808\u70BA\u6574\u6578\u3002
 typeMismatch.emptyOrderInfo.o_amt=\u8A02\u55AE\u5C0F\u8A08(p_id)\u5FC5\u9808\u70BA\u6574\u6578\u3002
 #=======================for order=================================
+event.a_name.notempty=\u6D3B\u52D5\u540D\u7A31\u70BA\u5FC5\u586B
+event.a_type.notempty=\u6D3B\u52D5\u985E\u578B\u70BA\u5FC5\u586B
+event.a_address.notempty=\u6D3B\u52D5\u5730\u5740\u70BA\u5FC5\u586B
+event.transientcomment.notempty=\u6D3B\u52D5\u5167\u5BB9\u70BA\u5FC5\u586B
+event.registration_starttime.notempty=\u5831\u540D\u958B\u59CB\u6642\u9593\u70BA\u5FC5\u586B
+event.registration_endrttime.notempty=\u5831\u540D\u7D50\u675F\u6642\u9593\u70BA\u5FC5\u586B
+event.Transienta_startTime.notempty=\u6D3B\u52D5\u958B\u59CB\u6642\u9593\u70BA\u5FC5\u586B
+event.Transienta_endTime.notempty=\u6D3B\u52D5\u7D50\u675F\u6642\u9593\u70BA\u5FC5\u586B
+typeMismatch.EventInfo.applicants =\u4EBA\u6578\u8981\u70BA\u6574\u6578
+#=======================for event=================================
+
+
+
+
